--- a/recipes/smoked-chicken.html
+++ b/recipes/smoked-chicken.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smoked Chicken Recipe</title>
 </head>
+
 <body>
     <h1>Smoked Chicken</h1>
     <img src="../images/smoked-chicken.jpg">
     <h2>Decilicious</h2>
-    <h3>This recipe is the perfect one to prepapre in no time a delicious smoked salmon meal that your family will enjoy!</h3>
+    <p>This recipe is the perfect one to prepapre in no time a delicious smoked salmon meal that your family will enjoy!
+    </p>
     <h2>Ingredients</h2>
     <ul>
         <li>Chicken</li>
@@ -29,4 +32,5 @@
         <li>Serve!</li>
     </ol>
 </body>
+
 </html>
