added css styles

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maxime Recipe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Maxime Recipes</h1>
-    <a href="recipes/smoked-salmon.html">Smoked Salmon</a>
-    <a href="recipes/smoked-chicken.html">Smoked Chicken</a>
-    <a href="recipes/smoked-beef.html">Smoked Beef</a>
+    <h1 class="header">Maxime Recipes</h1>
+    <div class="container">
+        <a href="recipes/smoked-salmon.html" class="card">Smoked Salmon</a>
+        <a href="recipes/smoked-chicken.html" class="card">Smoked Chicken</a>
+        <a href="recipes/smoked-beef.html" class="card">Smoked Beef</a>
+    </div>
 </body>
+
 </html>
